2007-04-29  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichTextBox.cs: In LoadFile, use StreamReader to read plain text.
	Fixes bug #81479. Include details of exception when LoadFile fails.

2007-04-28  Alan McGovern <alan.mcgovern@gmail.com>

	* DrawListViewSubItemEventArgs.cs: Added missing setter

2007-04-27  Andreia Gaita  <avidigal@novell.com>

	* ToolTip.cs: Add missing 2.0 properties. Implement 2.0 Show and 
	Hide methods (not complete). Implement missing 2.0 OnPopup event.

2007-04-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: In ItemControl.OnMouseDown restore a pair of braces I
	removed in ly last commit (it was breaking the Label edit feature).

	* ThemeWin32Classic.cs: When drawing a ListViewItem use
	StringAlignment.Near for LineAlignment (match .Net).

2007-04-27  Andreia Gaita  <avidigal@novell.com>

	* TabControl.cs: Change SetTab so it adds the tabpage to the list
	of controls if it isn't already there - was blowing up when doing
	tabcontrol.TabPages[i]=new TabPage(). 
	SetTab now does a replace by removing the page at the index. 
	Add a new InsertTab method that inserts a page in a given index 
	instead of replacing. 
	Implements TabPageCollection.Insert(int, TabPage).

2007-04-27  Chris Toshok  <toshok@ximian.com>

	* BindingManagerBase.cs: fill in CurrentItemChanged (and have an
	internal handler that can be invoked from our subclasses.)  Also,
	add a comment to PushData about how we need to fix it.

	* CurrencyManager.cs: tons of changes here.  trying to get things
	matching the behavior of .net wrt event orders (ItemChanged,
	CurrentChanged, PositionChanged.)  I've implemented a private .net
	symbol (ChangeRecordState) that appears in stack traces because
	it's actually easier to do this than to effective inline all its
	various behaviors at every call site.

	* RelatedPropertyManager.cs: guard against an exception here by
	not using parent.Current if the position is set to -1 (if the